# CoolChat-AI

./: .dockerignore  .env  .gitignore  Dockerfile  notification_log.txt  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: server.py
app/api/: main.py
app/api/routes/: chats.py
app/api/services/: agentService.py  chatService.py  graphService.py  indexService.py  oldagentService.py
app/api/v1/: chats.py  supporter.py
app/api/v2/: chats.py  dependencies.py
app/core/: config.py  connections.py  db.py
app/docs/: New Doc 2.docx  New Doc.doc  New Doc.docx  alo.py  coffee.txt  modified_New Doc 2.docx  modified_New Doc.docx  ~$dified_New Doc.docx
app/dtos/: chatUserDto.py  indexDto.py
app/indexes/: index.faiss  index.pkl
app/middleware/: serverauth.py
app/models/: __init__.py  agentModel.py  chatModel.py  interface.py  models.py  ranker.py  ranker_new.py  rankest.py
app/services/v1/: agentService.py  indexService.py
app/services/v2/: agentService.py  indexService.py  optimizeAgent.py  ragService.py
app/services/v2/compares/: chatService.py
app/services/v2/index/: _index_helper.py  indexService.py
app/services/v2/rag/: chat-langchain-rephrase.json  constant.py  futureWork.py  ragCore.py
app/utils/: crawlsite.py  extract.py  lifespan.py  metadata.json  summarizer.py  utils.py
llm_test/: unittest.py
tests/k6-tests/: report.json  script.js
tests/llm_test/: gen_api.py  gen_test.py  test_bias.py  test_generation.py  test_toxic.py  test_xlsx.py  try.xlsx
