[project]
name = "fastapillm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=2.0.9",
    "fastapi>=0.115.6",
    "jwt>=1.3.1",
    "langchain>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-openai>=0.2.14",
    "langchain-pinecone>=0.2.0",
    "motor>=3.6.0",
    "pinecone-client>=5.0.1",
    "pydantic-settings>=2.7.0",
    "sentry-sdk>=2.19.2",
    "uvicorn>=0.34.0",
]
