[project]
name = "fastapillm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "deepeval>=2.0.9",
    "docx2txt>=0.8",
    "fastapi>=0.115.6",
    "jwt>=1.3.1",
    "langchain>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-openai>=0.2.14",
    "langchain-pinecone>=0.2.0",
    "langgraph>=0.2.74",
    "motor>=3.6.0",
    "pinecone-client>=5.0.1",
    "pinecone-notebooks>=0.1.1",
    "playwright>=1.51.0",
    "pydantic-settings>=2.7.0",
    "pypdf>=5.1.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "sentry-sdk>=2.19.2",
    "uvicorn>=0.34.0",
]
